# PointRCNN

./: .gitignore  .gitmodules  DATASET_FORMAT.md  README.md  README_CUSTOM_DATASET.md  app_export_scala2_labels.py  app_playback_labels_open3d.py  infer_single_bin.py  label_scala2_range.py  merge_datasets.py  visualize_scala2_labels.py
doc/: jetson_orin_deployment.md
lib/: config.py
lib/datasets/: kitti_dataset.py  kitti_rcnn_dataset.py
lib/net/: point_rcnn.py  rpn.py  train_functions.py
lib/rpn/: proposal_layer.py  proposal_target_layer.py
lib/utils/: bbox_transform.py  calibration.py  kitti_utils.py  loss_utils.py  object3d.py
lib/utils/iou3d/: iou3d_utils.py
ros2/: point_rcnn_node.py
ros2/point_rcnn_ros/: package.xml  setup.cfg  setup.py
ros2/point_rcnn_ros/launch/: point_rcnn.launch.py
ros2/point_rcnn_ros/point_rcnn_ros/: point_rcnn_node.py
ros2/point_rcnn_ros/resource/: point_rcnn_ros
tools/: _init_path.py  analyze_aug_scene_points_in_boxes.py  benchmark_jetson.py  check_class_balance.py  compute_cls_mean_size.py  convert_data_to_kitti.py  eval_infer.py  eval_rcnn.py  eval_rpn.py  filter_aug_labels_by_points.py  generate_aug_scene.py  generate_gt_database.py  infer_frame_open3d.py  preprocess_dataset.py  train_rcnn.py  verify_bin_conversion.py
tools/cfgs/: default.yaml  final_point_rcnn_lock.yaml  orin_realtime.yaml  orin_ultrafast.yaml
tools/output/: cls_mean_size_stats.csv
tools/output/aug_scene_point_analysis/: class_summary.csv
tools/output/rcnn/default/: raw_sequence_fps.json
tools/train_utils/: fastai_optim.py  train_utils.py
