<?xml version="1.0"?>
<package format="3">
  <name>point_rcnn_ros</name>
  <version>0.1.0</version>
  <description>ROS2 PointRCNN node for realtime PointCloud2 inference and RViz box visualization.</description>

  <maintainer email="khang.buiphuoc@gmail.com">PointRCNN User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>